# Velocity-Download-Manager

./: .gitignore  .oxlintignore  .oxlintrc.json  LICENSE  README.md  SECURITY.md  index.html  make_cropped_icon.js  new_features.md  package.json  progress.md  rust-toolchain.toml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.claude/rules/: engine-architecture.instructions.md  rules.instructions.md
.github/workflows/: release.yml  validate.yml
.trae/rules/: rules.md
docs/: roadmap.md
extensions/vdm-catcher/: manifest.json
scripts/: check-version-sync.mjs
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_update.rs  capture_bridge.rs  lib.rs  main.rs  model.rs
src-tauri/src/engine/: disk.rs  disk_pool.rs  download_identity.rs  engine_log.rs  file_ops.rs  filename_policy.rs  helpers.rs  host_planner.rs  http_helpers.rs  http_pool.rs  integrity.rs  mod.rs  operations.rs  persistence.rs  persistence_queue.rs  probe.rs  probe_cache.rs  probe_filename.rs  probe_html.rs  probe_html_cache.rs  probe_html_patterns.rs  progress.rs  runtime.rs  runtime_dispatch.rs  runtime_race.rs  runtime_ramp.rs  runtime_recovery.rs  runtime_state.rs  runtime_support.rs  runtime_transfer.rs  runtime_unknown_size.rs  scheduler.rs  segmentation.rs  settings_policy.rs  wake_lock.rs
src/components/: BatchDownloadDialog.tsx  CompactCaptureWindow.tsx  DeleteConfirmationDialog.tsx  DownloadCapturePane.tsx  DownloadDetailsPanel.tsx  (+9 more)
(+34 files in other folders)
