[package]
name = "vdm"
version = "0.1.5"
edition = "2024"
resolver = "3"
rust-version = "1.93"

[lib]
name = "vdm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12.0.1"
regex = "1.12.2"
semver = "1.0.27"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "deflate"] }
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
hmac = "0.12.1"
getrandom = "0.2.15"
tokio = { version = "1.50.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
fs2 = "0.4.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
flume = "0.12.0"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
window-vibrancy = "0.7.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
